--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,14 +4,10 @@ container:
 test_task:
   matrix:
     - container:
-        image: ubuntu16.04
+        image: python:slim
     - allow_failures: true
       container:
-        image: ubuntu18.04
-    - container:
-        image: debian:7
-    - container:
-        image: debian:8
+        image: python:slim
   pip_cache:
     folder: ~/.cache/pip
     fingerprint_script: echo $PYTHON_VERSION && cat requirements.txt
