--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,10 +4,10 @@ container:
 test_task:
   matrix:
     - container:
-        image: python:slim
+        image: python:3.6
     - allow_failures: true
       container:
-        image: python:slim
+        image: python:2.7
   pip_cache:
     folder: ~/.cache/pip
     fingerprint_script: echo $PYTHON_VERSION && cat requirements.txt
